# scholarSparkShallowResearch

./: .env.example  Dockerfile  README.md  pyproject.toml  skaffold.yaml
.github/workflows/: helm-release.yaml
app/: main.py
app/api/routes/: router.py
app/core/: config.py
helm/: Chart.yaml  values.yaml
scripts/: package-helm.sh
