[tool.poetry]
name = "shallowresearchscholarspark"
version = "0.1.1"
description = "This is the service that handles the shallow research aspect of the scholar spark"
authors = ["Pouya Ataei <pouya.ataei@scholarspark.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"